# mealie-parser

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
scripts/docker/: entrypoint.sh  update.sh
scripts/install/: ubuntu_setup_mealie_parser.sh
src/mealie_parser/: __init__.py  __main__.py  cli.py  client.py  config.py  parser.py
tests/: test_client.py  test_config.py  test_parser.py
